<resources>
    <string name="app_name" translatable="false">FixCalc</string>

    <!-- Navigation Headers -->
    <string name="general_settings">General Settings</string>

    <!-- Menu Titles -->
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="start">Start</string>

    <!-- Examples -->
    <string name="example_title">Example Title</string>
    <string name="example_description">Example Description\nJust something short</string>
    <string name="example_value">12,50 $</string>

    <!-- Settings -->
    <string name="general">General</string>
    <string name="title">Title</string>
    <string name="title_default">Example</string>
    <string name="color">Color</string>
    <string name="description">Description</string>
    <string name="description_default">Example description</string>
    <string name="appearance">Appearance</string>
    <string name="value">Value</string>
    <string name="string_new">New</string>
    <string name="ui">User Interface</string>
    <string name="unit">Unit</string>
    <string name="unit_default">$</string>

    <!-- Item General Settings -->
    <string name="screen_pref_title_summary">Name of the screenulation</string>
    <string name="screen_pref_description_summary">Short description of the screenulation</string>
    <string name="screen_pref_vibration">Vibration</string>
    <string name="screen_pref_vibration_summary">Enable vibration on button press</string>
    <string name="screen_pref_show_sum">Show sum on top of screen</string>


    <!-- Item UI Settings -->
    <string name="screen_pref_ui_fast">Use fast input</string>
    <string name="screen_pref_ui_fast_description">Fast input is especially suitable for larger numbers</string>
    <string name="screen_pref_ui_add_button">Show \'Add\' button</string>
    <string name="screen_pref_ui_add_button_description">The whole button increments value</string>
    <string name="screen_pref_reset_button">Show Reset Button</string>
    <string name="screen_pref_reset_button_description">Resets all values to zero</string>

</resources>