<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/general">

        <EditTextPreference
            app:key="screen_pref_title"
            app:singleLine="true"
            app:title="@string/title"
            app:summary="@string/screen_pref_title_summary"
            app:defaultValue="@string/title_default" />

        <EditTextPreference
            app:defaultValue="@string/description_default"
            app:key="screen_pref_description"
            app:singleLine="true"
            app:summary="@string/screen_pref_description_summary"
            app:title="@string/description" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="screen_pref_vibration"
            app:title="@string/screen_pref_vibration"
            app:summary="@string/screen_pref_vibration_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/appearance">

        <EditTextPreference
            app:key="screen_pref_icon_color"
            app:title="TODO: Icon/Color" />

        <EditTextPreference
            app:key="screen_pref_background_color"
            app:title="TODO: Background Color" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="screen_pref_show_sum"
            app:title="@string/screen_pref_show_sum" />

        <EditTextPreference
            app:defaultValue="@string/unit_default"
            app:key="screen_pref_unit"
            app:singleLine="true"
            app:title="@string/unit" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/ui">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="screen_pref_ui_modern"
            app:title="@string/screen_pref_ui_fast"
            android:summary="@string/screen_pref_ui_fast_description" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="screen_pref_ui_add_button"
            app:title="@string/screen_pref_ui_add_button"
            app:summary="@string/screen_pref_ui_add_button_description"
            app:enabled="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="screen_pref_reset_button"
            app:title="@string/screen_pref_reset_button"
            app:summary="@string/screen_pref_reset_button_description" />

        <EditTextPreference
            app:key="screen_pref_reset_button_color"
            app:title="TODO: Background Color" />

    </PreferenceCategory>

</PreferenceScreen>