<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/list_item_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_dark_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/list_item_add"
        android:title="@string/add"
        android:icon="@drawable/ic_baseline_add_dark_24"
        app:showAsAction="always" />

    <item android:id="@+id/list_item_start"
        android:title="@string/start"
        android:icon="@drawable/ic_baseline_play_arrow_dark_24"
        app:showAsAction="always" />

    <item android:id="@+id/list_item_done"
        android:title="@string/done"
        android:icon="@drawable/ic_baseline_done_dark_24"
        app:showAsAction="ifRoom" />

</menu>